# fastapi_mongo_redis_celery_template

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  INFO  README.md  cele.py  pyproject.toml  requirements.txt  run_app.py  test.py
scripts/: initialize_project.sh  run_app.sh
src/: __init__.py  main.py
src/app_settings/: __init__.py  all.py  base_settings.py  celery_settings.py  fastapi_settings.py  mongodb_settings.py  proxy_settings.py  redis_settings.py
src/celery/: __init__.py  celery_tasks.py  setup_celery.py
src/database/: __init__.py  connect_mongodb.py  connect_redis.py
src/events/: __init__.py  shutdown.py  startup.py
src/exceptions/: __init__.py  response.py
src/middlewares/: __init__.py  brute_force_middleware.py  middlewares.py  my_middleware.py
src/models/: user.py
src/routers/: __init__.py
src/routers/routers_example/: __init__.py  views.py
src/routers/routers_user/: utils.py  views.py
src/schemas/: user.py
src/settings/: __init__.py  all.py  base_settings.py  fastapi_settings.py
