[tool.poetry]
name = "tynp"
version = "0.1.0"
description = ""
authors = ["tynp <ngophuty233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
bcrypt = "^4.0.1"
PyJWT = "^2.6.0"
umongo = "^3.1.0"
motor = "^3.1.1"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
redis = "^4.4.2"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
